apps/hivewiki-builder/overlays/dev/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hivewiki-builder
spec:
  endpointSelector:
    matchLabels:
      app: hivewiki-builder
      app.kubernetes.io/name: hivewiki-builder
      app.kubernetes.io/part-of: hivewiki
      environment: dev
  egress:
    - toFQDNs:
      - matchName: en.wikipedia.org
      toPorts:
      - ports:
        - port: "443"
          protocol: TCP
    - toFQDNs:
      - matchName: api.openai.com
      toPorts:
      - ports:
        - port: "443"
          protocol: TCP
    - toFQDNs:
      - matchName: api.anthropic.com
      toPorts:
      - ports:
        - port: "443"
          protocol: TCP
    - toFQDNs:
      - matchName: hivewiki-dev-mdqrku.serverless.apn2.cache.amazonaws.com
      toPorts:
      - ports:
        - port: "6379"
          protocol: TCP
    - toFQDNs:
      - matchName: hivewiki-dev.c7kkg8a0sdsw.ap-northeast-2.rds.amazonaws.com
      toPorts:
      - ports:
        - port: "5432"
          protocol: TCP
    - toEndpoints:
        - matchLabels:
            "k8s:io.kubernetes.pod.namespace": kube-system
            "k8s:k8s-app": kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
